added BranchServiceImpl testcase